--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,29 @@
   font-family: 'Lato', sans-serif;
   font-size: 40px;
   font-weight: 300;
+  margin-top: 1.1rem;
+  margin-bottom: 1.1rem;
 }
+.card-image {
+  height: 200px;
+  width: 200px;
+}
+.card-spacer {
+  height: 25px;
+}
+
+.jumbotron {
+  margin: 0;
+  padding: 30px;
+  background-image: linear-gradient(to right, #d9f0ec, #4acccc, #0547d4);
+  color: white;
+}
+
+.site-footer {
+  background-image: linear-gradient(#4acccc, white);
+  padding: 20px 0;
+}
+
 
 
 @media (prefers-reduced-motion: no-preference) {
@@ -37,7 +59,6 @@
   .App-logo-shadow {
     animation: App-logo-spin infinite 20s linear;
   }
-
 }
 .app-header {
   background-color: #eeeeee;
@@ -59,6 +80,9 @@
   padding-right:5px;
 }
 
+.nav-class {
+  background-color: #0e50cc !important;
+}
 
 @keyframes App-logo-spin {
   from {
