add content to contact page

--- a/src/App.css
+++ b/src/App.css
@@ -71,6 +71,11 @@
 
 
 }
+.contact-body {
+  background-image: url(./confetti_bkg_green.jpg);
+  background-repeat: repeat;
+  overflow: auto;
+}
 
 
 
